tests/tooling/fixtures/native/recovery/negative/negative_overchained_extern_pure_extern_qualifiers.objc3
// Negative fixture: declaration qualifiers reject over-chained duplicate `extern` entries.
// Expected diagnostic code(s): O3P100.
module NegativeOverchainedExternPureExternQualifiers;

extern pure extern fn add(lhs: i32, rhs: i32) -> i32;

fn main() -> i32 {
  return add(1, 2);
}
